--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,11 @@ Depends: sf,
          dplyr,
          viridis,
          patchwork,
-         ggplot2
+         ggplot2,
+         testthat
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Config/testthat/edition: 3
